gloo/docs/gloo_routing/virtual_services/routes/route_destinations/single_upstreams/discovered_upstream/virtual-service.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: test-petstore
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - 'foo'
    name: gloo-system.default
    routes:
      - matcher:
          prefix: /api/pets
        routeAction:
          single:
            upstream:
              name: default-petstore-8080
              namespace: gloo-system
